// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest.unit.env.ts should include config mock when project uses config practice 1`] = `
"jest.mock('./src/utils/config/getConfig', () => ({
  getConfig: jest.fn().mockImplementation(() => require('./config/test.json')), // mock that getConfig just returns plaintext test env config in unit tests
}));

/**
 * sanity check that unit tests are only run the 'test' environment
 *
 * usecases
 * - prevent polluting prod state with test data
 * - prevent executing financially impacting mutations
 */
if (
  process.env.NODE_ENV !== 'test' &&
  process.env.I_KNOW_WHAT_IM_DOING !== 'true'
)
  throw new Error(\`unit-test is not targeting stage 'test'\`);
"
`;

exports[`jest.unit.env.ts should not include config mock when project does not use config practice 1`] = `
"
/**
 * sanity check that unit tests are only run the 'test' environment
 *
 * usecases
 * - prevent polluting prod state with test data
 * - prevent executing financially impacting mutations
 */
if (
  process.env.NODE_ENV !== 'test' &&
  process.env.I_KNOW_WHAT_IM_DOING !== 'true'
)
  throw new Error(\`unit-test is not targeting stage 'test'\`);
"
`;
